[project]
name = "pystm32ai"
version = "1.0.1"
license = { text = "MIT" }
description = "Python Wrapper for stedgeai command line tool"
authors = [
    { name = "Thibaut VERCUEIL", email = "thibaut.vercueil@pm.me" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "py7zr>=0.22.0",
    "requests>=2.27.1",
    "rich>=13.9.4",
]

[project.scripts]
pystm32ai = "pystm32ai.stm32ai:run"

[project.urls]
repository = "https://github.com/thibthibaut/pystm32ai"

[project.optional-dependencies]
dev = [
    "pytest>=5.2",
    "pylint>=2.12.2",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
